完成logout接口
